# qpointz-rapids

./: .gitignore  .gitlab-ci.yml  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
buildSrc/: build.gradle.kts  settings.gradle.kts
etc/: .gitignore
etc/docker/ci-graalvm/: Dockerfile  settings.xml
etc/msynth/: airlines.yaml  experiments.py  formats.yaml  models.py  msynth.py  pyproject.toml  requirements.txt  writers.py
etc/msynth/msynth/: __main__.py  main.py  provider.py
etc/msynth/msynth/tests/: test_arguments.py
etc/terraform/: .gitignore  main.tf  variables.tf
rapids-api/: build.gradle.kts
rapids-core/: build.gradle.kts
rapids-example/data/: airlines.yaml  partitioned.yaml
rapids-example/data/airlines_csv/: airlines.yaml  cities.csv  flights.csv  passenger.csv  segments.csv
rapids-example/data/airlines_parquet/: passenger.parquet
rapids-example/data/example/: CLIENT.csv
rapids-example/data/partitioned/: items-2023-01-02.parquet  items-2023-01-12.parquet  items-2023-02-11.parquet  items-2023-03-02.parquet  items-2023-03-12.parquet  items-2023-04-02.parquet  items-2023-05-02.parquet  items-2023-05-15.parquet  (+8 more)
rapids-formats/: build.gradle.kts
rapids-formats-avro-parquet/: build.gradle.kts
rapids-jdbc-driver/: build.gradle.kts
rapids-providers-azure/: build.gradle.kts
rapids-server/: build.gradle.kts
rapids-server/etc/: application.yaml  model.json
rapids-srv-worker/: .gitignore  build.gradle.kts
rapids-srv-worker/config/: application.yaml
rapids-srv-worker/etc/: model.json
rapids-testkit/: build.gradle.kts
(+253 files in other folders)
