[project]
name = "msynth"
version = "0.0.1"
dependencies = [
    "pandas",
    "pathlib",
    "faker",
    "faker_airtravel",
    "pyyaml",
    "croniter",
    "pyarrow",
    "argparse"
]

#[tool.setuptools.packages.find]
# All the following settings are optional:
#where = ["."]  # ["."] by default
#include = ["msynth*"]  # ["*"] by default
#exclude = ["tests*"]  # empty by default
#namespaces = false  # true by default

[project.scripts]
cli-name="msynth.main:exec_cli"
